Small bow example hit quaternion bugfix

--- a/examples/bow_ml.html
+++ b/examples/bow_ml.html
@@ -760,6 +760,7 @@
                               arrow.quaternion.setFromUnitVectors(
                                 localVector2.set(0, 0, -1),
                                 localVector3
+                                  .copy(localVector)
                                   .sub(startPosition)
                                   .normalize()
                               );
