Add missing tutorial floor size constant

--- a/examples/tutorial.html
+++ b/examples/tutorial.html
@@ -12,6 +12,8 @@
   <script>
     let container, scene, camera, display, model;
 
+    const FLOOR_SIZE = 20;
+
     function init() {
       container = document.createElement('div');
       document.body.appendChild(container);
