Small tutorial plane image reference bugfix

--- a/examples/tutorial.html
+++ b/examples/tutorial.html
@@ -53,7 +53,7 @@
         planeImg.crossOrigin = 'Anonymous';
         planeImg.src = 'tutorial.png';
         planeImg.onload = () => {
-          texture.image = graphImg;
+          texture.image = planeImg;
           texture.needsUpdate = true;
         };
         planeImg.onerror = err => {
