--- a/examples/tutorial.html
+++ b/examples/tutorial.html
@@ -17,6 +17,7 @@
     const localQuaternion = new THREE.Quaternion();
     const localEuler = new THREE.Euler();
     localEuler.order = 'YXZ';
+    const localMatrix = new THREE.Matrix4();
 
     const FLOOR_SIZE = 20;
 
