--- a/examples/tutorial.html
+++ b/examples/tutorial.html
@@ -14,6 +14,7 @@
     let animation = null;
 
     const localVector = new THREE.Vector3();
+    const localVector2 = new THREE.Vector3();
     const localQuaternion = new THREE.Quaternion();
     const localEuler = new THREE.Euler();
     localEuler.order = 'YXZ';
@@ -194,7 +195,7 @@
           localMatrix.lookAt(
             endPosition,
             localVector.set(0, 1.5, 0),
-            localVector2.set(0, 1, 0),
+            localVector2.set(0, 1, 0)
           )
         ),
         endPosition,
