--- a/examples/shooter_ml.html
+++ b/examples/shooter_ml.html
@@ -150,7 +150,7 @@
         const particle = _makeParticle();
         particle.position.copy(position);
         particle.quaternion.copy(rotation);
-        // particle.updateMatrix();
+        particle.updateMatrix();
         particle.updateMatrixWorld(true);
         particle.velocity = new THREE.Vector3(
           (Math.random() - 0.5) * 0.01,
