Add initial reality tabs party tab

--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -79,6 +79,8 @@ const links = [
     url: 'microphone.html',
   },
 ].map(({name, url}) => ({name, url, iconMesh: null}));
+let servers = [];
+
 const RAY_COLOR = 0x44c2ff;
 const RAY_HIGHLIGHT_COLOR = new THREE.Color(RAY_COLOR).multiplyScalar(0.5).getHex();
 const rayDistance = 3;
@@ -892,6 +894,12 @@ const _makeRig = () => {
         ctx.fillStyle = mesh.list === 'links' ? '#FFF' : '#000';
         ctx.fillText('Links', menuWidth*0.6 + menuWidth*0.2/2 - 70, menuHeight/2 + 20);
 
+        // Party
+        ctx.fillStyle = mesh.list === 'party' ? '#42a5f5' : '#EEE';
+        ctx.fillRect(menuWidth*0.8, 0, menuWidth*0.2 - 5, menuHeight);
+        ctx.fillStyle = mesh.list === 'links' ? '#FFF' : '#000';
+        ctx.fillText('Party', menuWidth*0.8 + menuWidth*0.2/2 - 70, menuHeight/2 + 20);
+
         texture.needsUpdate = true;
       };
       _updateOptions();
@@ -1071,6 +1079,54 @@ const _makeRig = () => {
           }
 
           _renderScrollbar(links.length);
+        } else if (optionsMesh.list === 'party') {
+          if (servers.length > 0) {
+            const localServers = servers.slice(mesh.scrollIndex, mesh.scrollIndex + 4);
+            for (let i = 0; i < localServers.length; i++) {
+              const servers = localServers[i];
+              const {name} = servers;
+              const y = menuHeight*i;
+
+              ctx.fillStyle = '#FFFFFF';
+              ctx.fillRect(0, y, menuWidth*0.98, menuHeight);
+
+              ctx.fillStyle = '#000000';
+              ctx.fillText(name, 100, y + menuHeight/2 + 20);
+
+              if (!server.iconMesh) {
+                const iconMesh = (() => {
+                  const iconMesh = new THREE.Object3D();
+
+                  function pad(n, width) {
+                    return n.length >= width ? n : new Array(width - n.length + 1).join('0') + n;
+                  }
+
+                  _requestSpriteMesh(`icons/Food_${pad((4+mesh.scrollIndex+i) + '', 2)}.png`)
+                    .then(spriteMesh => {
+                      spriteMesh.position.set(-0.45, 0.15 - i*0.1, 0.05);
+                      spriteMesh.rotation.order = 'YXZ';
+                      spriteMesh.scale.set(0.16, 0.16, 0.16);
+                      spriteMesh.frustumCulled = false;
+                      iconMesh.add(spriteMesh);
+                    });
+
+                  return iconMesh;
+                })();
+                server.iconMesh = iconMesh;
+                iconMeshes.push(iconMesh);
+              }
+              mesh.add(server.iconMesh);
+              server.iconMesh.children[0] && (server.iconMesh.children[0].position.y = 0.15 - i*0.1);
+            }
+          } else {
+            ctx.fillStyle = '#000000';
+            ctx.fillRect(0, 0, menuWidth*0.3 - 5, menuHeight);
+
+            ctx.fillStyle = '#FFFFFF';
+            ctx.fillText('No servers', 50, menuHeight/2 + 20);
+          }
+
+          _renderScrollbar(servers.length);
         }
 
         texture.needsUpdate = true;
@@ -1765,6 +1821,11 @@ function animate(time, frame) {
                     menuMesh.listMesh.updateList();
                   } else if (optionX === 3) {
                     menuMesh.optionsMesh.list = 'links';
+                    menuMesh.optionsMesh.updateOptions();
+                    menuMesh.listMesh.scrollIndex = 0;
+                    menuMesh.listMesh.updateList();
+                  } else if (optionX === 4) {
+                    menuMesh.optionsMesh.list = 'party';
                     menuMesh.optionsMesh.updateOptions();
                     menuMesh.listMesh.scrollIndex = 0;
                     menuMesh.listMesh.updateList();
