--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -6,6 +6,8 @@
     <script src="keycode.js"></script>
     <script src="svg-boundings.js"></script>
     <script src="sprite3d.js"></script>
+    <script src="xrmp.js"></script>
+    <script src="xrmp-three.js"></script>
     <script>
 let display, fakeDisplay, tabs = [], lastPresseds = [false, false], lastAxes = [[0.5, 0.5], [0.5, 0.5]], lastPadToucheds = [false, false], scrollFactors = [0, 0], scaleFactors = [1, 1];
 
